--- a/api/package.json
+++ b/api/package.json
@@ -124,6 +124,8 @@
         "morgan": "^1.10.0",
         "prisma": "^6.19.0",
         "prom-client": "^15.1.3",
+        "rate-limit-redis": "^4.2.3",
+        "redis": "^5.9.0",
         "uuid": "^8.3.2",
         "winston": "^3.11.0",
         "ws": "^8.18.3",
