--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "dependencies": {
         "axios": "^1.6.0",
         "express": "^4.21.2",
-        "next": "~15.2.4",
+        "next": "^15.5.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
     },
@@ -77,7 +77,7 @@
         "@types/react-dom": "^19.0.0",
         "autoprefixer": "10.4.13",
         "babel-jest": "^30.0.2",
-        "esbuild": "^0.19.2",
+        "esbuild": "^0.27.0",
         "eslint": "^9.8.0",
         "eslint-config-next": "^15.2.4",
         "eslint-config-prettier": "^10.0.0",
