--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "next": "~15.2.4",
+        "esbuild": "0.27.0",
+        "next": "^15.5.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0"
     }
