feat: add cache clear script and dotenv dependency
- Added a new script to clear Redis cache located at api/scripts/redis/clear-cache.ts.
- Integrated dotenv to manage environment variables for Redis connection.
- Updated package.json to include a new npm script "cache:clear" for executing the cache clear command.
- Added dotenv as a dependency to handle environment variables.

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,17 +1,21 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/foody_db?schema=public"
+DATABASE_URL="postgresql://username:password@localhost:5432/foody_db?sslmode=require&channel_binding=require"  # Main database connection URL (replace with your PostgreSQL credentials)
+DATABASE_URL_UNPOOLED="postgresql://username:password@localhost:5432/foody_db?sslmode=require&channel_binding=require"  # Unpooled database connection for Prisma (optional, for specific use cases)
+
+# Redis Configuration
+REDIS_URL="redis://localhost:6379"  # Redis connection URL for caching and rate limiting (use services like Upstash for cloud Redis)
 
 # JWT Authentication
-JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
-JWT_EXPIRES_IN="7d"  # Token expiration (e.g., "7d", "24h", "1h", "3600s")
+JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"  # Secret key for signing JWT tokens (must be secure and unique)
+JWT_EXPIRES_IN="7d"  # Token expiration time (e.g., "7d", "24h", "1h", "3600s")
 
 # Server Configuration
-HOST="localhost"  # Server host (default: localhost)
-PORT=4000  # Server port (default: 4000)
-NODE_ENV="development"  # Environment: development, production, test
+HOST="localhost"  # Server host address (default: localhost)
+PORT=4000  # Server port number (default: 4000)
+NODE_ENV="development"  # Environment mode: development, production, test
 
 # CORS Configuration
-CORS_ORIGIN="http://localhost:3000"  # Comma-separated list of allowed origins
+CORS_ORIGIN="http://localhost:3000"  # Comma-separated list of allowed origins for CORS (e.g., "http://localhost:3000,https://yourdomain.com")
 
 # Logging
 LOG_LEVEL="info"  # Log level: error, warn, info, debug (default: info)
