--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build": "nx run-many --target=build --all",
         "build:api": "nx build @foody/api",
         "build:web": "nx build @foody/web",
+        "cache:clear": "cd api && npm run clear-cache",
         "db:generate": "cd api && npx prisma generate",
         "db:migrate": "cd api && npx prisma migrate dev",
         "db:reset": "cd api && npx prisma migrate reset --force",
@@ -77,6 +78,7 @@
         "@types/react-dom": "^19.0.0",
         "autoprefixer": "10.4.13",
         "babel-jest": "^30.0.2",
+        "dotenv": "^17.2.3",
         "esbuild": "^0.27.0",
         "eslint": "^9.8.0",
         "eslint-config-next": "^15.2.4",
