--- a/api/package.json
+++ b/api/package.json
@@ -2,8 +2,47 @@
     "name": "@foody/api",
     "version": "0.0.1",
     "private": true,
-    "prisma": {
-        "seed": "tsx scripts/database/seed.ts"
+    "scripts": {
+        "clear-cache": "tsx scripts/redis/clear-cache.ts"
+    },
+    "dependencies": {
+        "@apollo/server": "^5.1.0",
+        "@as-integrations/express4": "^1.1.2",
+        "@graphql-tools/schema": "^10.0.29",
+        "@prisma/client": "^6.19.0",
+        "bcryptjs": "^3.0.3",
+        "compression": "^1.7.4",
+        "cors": "^2.8.5",
+        "express": "^4.21.2",
+        "express-rate-limit": "^8.2.1",
+        "graphql": "^16.12.0",
+        "graphql-depth-limit": "^1.1.0",
+        "graphql-tools": "^9.0.24",
+        "graphql-ws": "^6.0.6",
+        "helmet": "^8.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
+        "prisma": "^6.19.0",
+        "prom-client": "^15.1.3",
+        "rate-limit-redis": "^4.2.3",
+        "redis": "^5.9.0",
+        "uuid": "^8.3.2",
+        "winston": "^3.11.0",
+        "ws": "^8.18.3",
+        "zod": "^4.1.12"
+    },
+    "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
+        "@types/compression": "^1.7.5",
+        "@types/cors": "^2.8.12",
+        "@types/express": "^4.17.25",
+        "@types/graphql-depth-limit": "^1.1.6",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/morgan": "^1.9.9",
+        "@types/uuid": "^10.0.0",
+        "@types/ws": "^8.18.1",
+        "tsx": "^4.20.6",
+        "typescript": "^5.9.3"
     },
     "nx": {
         "targets": {
@@ -105,43 +144,7 @@
             }
         }
     },
-    "dependencies": {
-        "@apollo/server": "^5.1.0",
-        "@as-integrations/express4": "^1.1.2",
-        "@graphql-tools/schema": "^10.0.29",
-        "@prisma/client": "^6.19.0",
-        "bcryptjs": "^3.0.3",
-        "compression": "^1.7.4",
-        "cors": "^2.8.5",
-        "express": "^4.21.2",
-        "express-rate-limit": "^8.2.1",
-        "graphql": "^16.12.0",
-        "graphql-depth-limit": "^1.1.0",
-        "graphql-tools": "^9.0.24",
-        "graphql-ws": "^6.0.6",
-        "helmet": "^8.1.0",
-        "jsonwebtoken": "^9.0.2",
-        "morgan": "^1.10.0",
-        "prisma": "^6.19.0",
-        "prom-client": "^15.1.3",
-        "rate-limit-redis": "^4.2.3",
-        "redis": "^5.9.0",
-        "uuid": "^8.3.2",
-        "winston": "^3.11.0",
-        "ws": "^8.18.3",
-        "zod": "^4.1.12"
-    },
-    "devDependencies": {
-        "@types/bcryptjs": "^2.4.6",
-        "@types/compression": "^1.7.5",
-        "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.25",
-        "@types/graphql-depth-limit": "^1.1.6",
-        "@types/jsonwebtoken": "^9.0.10",
-        "@types/morgan": "^1.9.9",
-        "@types/uuid": "^10.0.0",
-        "@types/ws": "^8.18.1",
-        "tsx": "^4.20.6",
-        "typescript": "^5.9.3"
+    "prisma": {
+        "seed": "tsx scripts/database/seed.ts"
     }
 }
