--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,11 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "@tailwindcss/postcss": "^4.1.17",
         "esbuild": "0.27.0",
         "next": "^15.5.6",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "tailwindcss": "^4.1.17"
     }
 }
