--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "@apollo/client": "^4.0.9",
         "@hookform/resolvers": "^5.2.2",
         "@radix-ui/react-accordion": "^1.2.12",
         "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -37,6 +38,7 @@
         "date-fns": "^4.1.0",
         "embla-carousel-react": "^8.6.0",
         "esbuild": "0.27.0",
+        "graphql": "^16.12.0",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.554.0",
         "next": "^15.5.6",
