--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "db:seed": "cd api && npx prisma db seed",
         "db:setup": "npm run db:reset && npm run db:migrate && npm run db:seed",
         "db:studio": "cd api && npx prisma studio",
+        "db:format": "cd api && npx prisma format",
         "dev": "nx run-many --target=dev --parallel",
         "dev:api": "nx dev @foody/api",
         "dev:web": "nx dev @foody/web",
