--- a/web/package.json
+++ b/web/package.json
@@ -43,6 +43,7 @@
         "lucide-react": "^0.554.0",
         "next": "^15.5.6",
         "next-themes": "^0.4.6",
+        "nextjs-toploader": "^3.9.17",
         "react": "^19.0.0",
         "react-day-picker": "^9.11.1",
         "react-dom": "^19.0.0",
