--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,7 @@
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.6",
+        "@types/cli-progress": "^3.11.6",
         "@types/compression": "^1.7.5",
         "@types/cors": "^2.8.12",
         "@types/express": "^4.17.25",
@@ -41,6 +42,7 @@
         "@types/morgan": "^1.9.9",
         "@types/uuid": "^10.0.0",
         "@types/ws": "^8.18.1",
+        "cli-progress": "^3.12.0",
         "tsx": "^4.20.6",
         "typescript": "^5.9.3"
     },
