--- a/package.json
+++ b/package.json
@@ -78,6 +78,12 @@
         "@nx/playwright": "22.0.3",
         "@nx/workspace": "22.0.3",
         "@playwright/test": "^1.36.0",
+        "@semantic-release/changelog": "^6.0.3",
+        "@semantic-release/commit-analyzer": "^13.0.1",
+        "@semantic-release/git": "^10.0.1",
+        "@semantic-release/github": "^12.0.2",
+        "@semantic-release/npm": "^13.1.2",
+        "@semantic-release/release-notes-generator": "^14.1.0",
         "@swc-node/register": "~1.9.1",
         "@swc/cli": "~0.6.0",
         "@swc/core": "~1.5.7",
@@ -111,6 +117,7 @@
         "nx": "22.0.3",
         "prettier": "^3.6.2",
         "prettier-plugin-tailwindcss": "^0.7.1",
+        "semantic-release": "^25.0.2",
         "tailwindcss": "^4.1.17",
         "ts-jest": "^29.4.0",
         "ts-node": "10.9.1",
