--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,8 @@
 {
-    "tabWidth": 4,
+    "semi": true,
     "printWidth": 100,
+    "tabWidth": 4,
+    "useTabs": false,
+    "endOfLine": "lf",
     "plugins": ["prettier-plugin-tailwindcss"]
 }
