--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,8 @@
     "schedule": ["before 4am on Monday"],
     "timezone": "UTC",
     "labels": ["dependencies"],
+    "assignees": ["RanitManik"],
+    "reviewers": ["RanitManik"],
     "packageRules": [
         {
             "matchPackagePatterns": ["^@nx/"],
@@ -12,6 +14,49 @@
         {
             "matchPackagePatterns": ["^@types/"],
             "groupName": "@types packages"
+        },
+        {
+            "matchPackagePatterns": ["^@semantic-release/"],
+            "groupName": "Semantic Release packages"
+        },
+        {
+            "matchPackagePatterns": ["^eslint"],
+            "groupName": "ESLint packages"
+        },
+        {
+            "matchPackagePatterns": ["^prettier"],
+            "groupName": "Prettier packages"
+        },
+        {
+            "matchPackagePatterns": ["^jest"],
+            "groupName": "Jest packages"
+        },
+        {
+            "matchPackagePatterns": ["^@swc/"],
+            "groupName": "SWC packages"
+        },
+        {
+            "matchPackagePatterns": ["^@playwright/"],
+            "groupName": "Playwright packages"
+        },
+        {
+            "matchPackageNames": ["typescript"],
+            "groupName": "TypeScript"
+        },
+        {
+            "matchPackageNames": ["next"],
+            "groupName": "Next.js"
+        },
+        {
+            "matchPackageNames": ["prisma"],
+            "groupName": "Prisma"
         }
-    ]
+    ],
+    "vulnerabilityAlerts": {
+        "enabled": true
+    },
+    "lockFileMaintenance": {
+        "enabled": true,
+        "schedule": ["before 4am on Monday"]
+    }
 }
