chore(jest): update coverage directory to use NX convention for per-project artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
             - name: Upload Web coverage to Codecov
               uses: codecov/codecov-action@v4
               with:
-                  file: ./coverage/web/lcov.info
+                  file: ./web/test-output/jest/coverage/lcov.info
                   flags: web
                   name: codecov-web
                   fail_ci_if_error: false
