--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,8 @@
     },
     "[markdown]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[github-actions-workflow]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     }
 }
