--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,15 +80,15 @@ jobs:
               if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'
               uses: codecov/codecov-action@v5
               with:
-                  file: ./api/test-output/jest/coverage/lcov.info
+                  files: ./api/test-output/jest/coverage/lcov.info
                   flags: api
                   token: ${{ secrets.CODECOV_TOKEN }}
 
             - name: Upload Web coverage
               if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev'
-              uses: codecov/codecov-action@v5
+              uses: codecov/codecov-action@v4
               with:
-                  file: ./web/test-output/jest/coverage/lcov.info
+                  files: ./web/test-output/jest/coverage/lcov.info
                   flags: web
                   token: ${{ secrets.CODECOV_TOKEN }}
 
