--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -135,12 +135,10 @@ jobs:
             - name: Install dependencies
               run: npm ci --ignore-scripts
 
-            # Retrieve the build from the previous job
-            - name: Download Build Artifacts
-              uses: actions/download-artifact@v4
-              with:
-                  name: dist-artifacts
-                  path: dist
+            - name: Create Release Branch
+              run: |
+                  git checkout -b release
+                  git push origin release
 
             - name: Semantic Release
               run: npx semantic-release
@@ -158,4 +156,5 @@ jobs:
                   title: "chore(release): ${{ steps.tag.outputs.tag }} [skip ci]"
                   body: "Automated PR created by Release Action."
                   branch: release
+                  base: main
                   delete-branch: true
