test: add comprehensive GraphQL resolver tests
- Add complete test suites for all GraphQL resolvers:
  * Menu resolvers (CRUD, access control, caching)
  * User resolvers (management, admin restrictions)
  * Order resolvers (lifecycle, transactions, validation)
  * Restaurant resolvers (CRUD, field resolvers, scoping)
  * Payment resolvers (methods, transactions, processing)
  * Feedback resolvers (submission, admin listing)

- Fix CI workflow semantic-release branch configuration
- Update web Jest config to include specs/ directory tests
- All tests passing with 260+ test cases covering authentication,
  authorization, business logic, and error handling

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -145,6 +145,7 @@ jobs:
               run: npx semantic-release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                  GITHUB_REF: refs/heads/release
 
             - name: Set Tag
               id: tag
